tests/js/error/semantics/builtin_number8.js
/*******************************************************************************
Copyright (c) 2012, S-Core.
All rights reserved.

Use is subject to license terms.

This distribution may include materials developed by third parties.
******************************************************************************/

// FAIL: Number.MIN_VALUE should be smallest POSITIVE value.

var __result1 = Number.MIN_VALUE;
var __expect1 = 5e-324;
